<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CadastrarActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/uninassau" />

    <TextView
        android:id="@+id/tvCadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="60dp"
        android:text="@string/cadastro_txt"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/txCadastroEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/login_email"
        android:inputType="textEmailAddress"
        android:text="@string/vazio"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/txCadastroPass1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/login_senha"
        android:inputType="textPassword"
        android:text="@string/vazio"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/login_senha2"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btCadastrarCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/azul"
        android:text="@string/cadastrar_txt" />
</LinearLayout>